name:                flair-counter
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable flair-counter
  main-is:           Main.hs
  build-depends:
    base == 4.7.*,
    containers,
    reddit,
    text,
    transformers
  hs-source-dirs:    ./, src/
  ghc-options:       -Wall
  default-language:  Haskell2010
  default-extensions:
    OverloadedStrings
